default is to run no tests, nor deal with the DB at all.  activate the provile "database.active" to get the tests running and liquibase loading schema and loading the java stored proceedures.  to drop, add -Ddrop as usual.  e.g. :
	 mvn -P database.active clean install -Ddrop

--- a/animations/pom.xml
+++ b/animations/pom.xml
@@ -1,248 +1,258 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>com.hellblazer.CoRE</groupId>
-		<artifactId>CoRE.app</artifactId>
-		<version>0.0.2-SNAPSHOT</version>
-	</parent>
-	<artifactId>animations</artifactId>
-	<name>CoRE Animations</name>
-	<description>Animations for the CoRE model</description>
-	<properties>
-		<animation.jar.name>model</animation.jar.name>
-		<animation.jar.file>${project.build.directory}/${project.artifactId}-${project.version}.${project.packaging}</animation.jar.file>
-		<main.sql>${project.basedir}/src/main/sql</main.sql>
-	</properties>
-	<dependencies>
-		<dependency>
-			<groupId>com.hellblazer.CoRE</groupId>
-			<artifactId>model</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.hellblazer.CoRE</groupId>
-			<artifactId>test-framework</artifactId>
-			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<artifactId>commons-lang</artifactId>
-					<groupId>commons-lang</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>junit</artifactId>
-					<groupId>junit</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>slf4j-api</artifactId>
-					<groupId>org.slf4j</groupId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.hellblazer</groupId>
-			<artifactId>pljava-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.reflections</groupId>
-			<artifactId>reflections</artifactId>
-			<exclusions>
-				<exclusion>
-					<artifactId>guava</artifactId>
-					<groupId>com.google.guava</groupId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<classifier>site</classifier>
-		</dependency>
-		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-classic</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>3.3</version>
-		</dependency>
-	</dependencies>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.liquibase</groupId>
-				<artifactId>liquibase-maven-plugin</artifactId>
-				<configuration>
-					<promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
-					<driver>org.postgresql.Driver</driver>
-					<url>jdbc:postgresql://${testing.db.server}:${testing.db.port}/core</url>
-					<username>${testing.db.login}</username>
-					<password>${testing.db.password}</password>
-					<changeLogFile>${main.sql}/com/hellblazer/CoRE/schema/ruleform/animations.xml</changeLogFile>
-					<verbose>false</verbose>
-				</configuration>
-				<executions>
-					<execution>
-						<phase>process-resources</phase>
-						<goals>
-							<goal>update</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>com.hellblazer</groupId>
-				<artifactId>pljava-loader</artifactId>
-				<configuration>
-					<jdbcUrl>jdbc:postgresql://${testing.db.server}:${testing.db.port}/core</jdbcUrl>
-					<username>${testing.db.login}</username>
-					<password>${testing.db.password}</password>
-					<excluded>
-						<resource>
-							<groupId>org.apache.openjpa</groupId>
-							<artifactId>openjpa-all</artifactId>
-							<version>2.2.2</version>
-							<type>jar</type>
-						</resource>
-						<resource>
-							<groupId>com.hellblazer</groupId>
-							<artifactId>pljava-api</artifactId>
-							<version>0.0.1-SNAPSHOT</version>
-						</resource>
-					</excluded>
-					<classpathProperty>pljavaClassPath</classpathProperty>
-				</configuration>
-				<executions>
-					<execution>
-						<phase>generate-test-sources</phase>
-						<goals>
-							<goal>load</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>sql-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>set-classpath</id>
-						<phase>generate-test-sources</phase>
-						<goals>
-							<goal>execute</goal>
-						</goals>
-						<configuration>
-							<driver>org.postgresql.Driver</driver>
-							<url>jdbc:postgresql://${testing.db.server}:${testing.db.port}/core</url>
-							<username>${testing.db.login}</username>
-							<password>${testing.db.password}</password>
-							<autocommit>true</autocommit>
-							<sqlCommand>SELECT sqlj.set_classpath('ruleform',
-								'${pljavaClassPath}');</sqlCommand>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<executions>
-					<execution>
-						<goals>
-							<goal>test-jar</goal>
-						</goals>
-						<configuration>
-							<excludes>
-								<exclude>logback-test.xml</exclude>
-							</excludes>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-		<pluginManagement>
-			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings 
-					only. It has no influence on the Maven build itself. -->
-				<plugin>
-					<groupId>org.eclipse.m2e</groupId>
-					<artifactId>lifecycle-mapping</artifactId>
-					<version>1.0.0</version>
-					<configuration>
-						<lifecycleMappingMetadata>
-							<pluginExecutions>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>
-											com.hellblazer
-										</groupId>
-										<artifactId>
-											pljava-loader
-										</artifactId>
-										<versionRange>
-											[0.0.1-SNAPSHOT,)
-										</versionRange>
-										<goals>
-											<goal>load</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore></ignore>
-									</action>
-								</pluginExecution>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>org.liquibase</groupId>
-										<artifactId>
-											liquibase-maven-plugin
-										</artifactId>
-										<versionRange>
-											[2.0.5,)
-										</versionRange>
-										<goals>
-											<goal>update</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore></ignore>
-									</action>
-								</pluginExecution>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>
-											org.codehaus.mojo
-										</groupId>
-										<artifactId>
-											sql-maven-plugin
-										</artifactId>
-										<versionRange>
-											[1.5,)
-										</versionRange>
-										<goals>
-											<goal>execute</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore></ignore>
-									</action>
-								</pluginExecution>
-							</pluginExecutions>
-						</lifecycleMappingMetadata>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-	</build>
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+>
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.hellblazer.CoRE</groupId>
+        <artifactId>CoRE.app</artifactId>
+        <version>0.0.2-SNAPSHOT</version>
+    </parent>
+    <artifactId>animations</artifactId>
+    <name>CoRE Animations</name>
+    <description>Animations for the CoRE model</description>
+    <properties>
+        <animation.jar.name>model</animation.jar.name>
+        <animation.jar.file>${project.build.directory}/${project.artifactId}-${project.version}.${project.packaging}</animation.jar.file>
+        <main.sql>${project.basedir}/src/main/sql</main.sql>
+    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>com.hellblazer.CoRE</groupId>
+            <artifactId>model</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.hellblazer.CoRE</groupId>
+            <artifactId>test-framework</artifactId>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <artifactId>commons-lang</artifactId>
+                    <groupId>commons-lang</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>junit</artifactId>
+                    <groupId>junit</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>slf4j-api</artifactId>
+                    <groupId>org.slf4j</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.hellblazer</groupId>
+            <artifactId>pljava-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <exclusions>
+                <exclusion>
+                    <artifactId>guava</artifactId>
+                    <groupId>com.google.guava</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <classifier>site</classifier>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.3</version>
+        </dependency>
+    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>test-jar</goal>
+                        </goals>
+                        <configuration>
+                            <excludes>
+                                <exclude>logback-test.xml</exclude>
+                            </excludes>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+        <pluginManagement>
+            <plugins>
+                <!--This plugin's configuration is used to store Eclipse m2e settings
+                    only. It has no influence on the Maven build itself. -->
+                <plugin>
+                    <groupId>org.eclipse.m2e</groupId>
+                    <artifactId>lifecycle-mapping</artifactId>
+                    <version>1.0.0</version>
+                    <configuration>
+                        <lifecycleMappingMetadata>
+                            <pluginExecutions>
+                                <pluginExecution>
+                                    <pluginExecutionFilter>
+                                        <groupId>
+                                            com.hellblazer
+                                        </groupId>
+                                        <artifactId>
+                                            pljava-loader
+                                        </artifactId>
+                                        <versionRange>
+                                            [0.0.1-SNAPSHOT,)
+                                        </versionRange>
+                                        <goals>
+                                            <goal>load</goal>
+                                        </goals>
+                                    </pluginExecutionFilter>
+                                    <action>
+                                        <ignore></ignore>
+                                    </action>
+                                </pluginExecution>
+                                <pluginExecution>
+                                    <pluginExecutionFilter>
+                                        <groupId>org.liquibase</groupId>
+                                        <artifactId>
+                                            liquibase-maven-plugin
+                                        </artifactId>
+                                        <versionRange>
+                                            [2.0.5,)
+                                        </versionRange>
+                                        <goals>
+                                            <goal>update</goal>
+                                        </goals>
+                                    </pluginExecutionFilter>
+                                    <action>
+                                        <ignore></ignore>
+                                    </action>
+                                </pluginExecution>
+                                <pluginExecution>
+                                    <pluginExecutionFilter>
+                                        <groupId>
+                                            org.codehaus.mojo
+                                        </groupId>
+                                        <artifactId>
+                                            sql-maven-plugin
+                                        </artifactId>
+                                        <versionRange>
+                                            [1.5,)
+                                        </versionRange>
+                                        <goals>
+                                            <goal>execute</goal>
+                                        </goals>
+                                    </pluginExecutionFilter>
+                                    <action>
+                                        <ignore></ignore>
+                                    </action>
+                                </pluginExecution>
+                            </pluginExecutions>
+                        </lifecycleMappingMetadata>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
+    <profiles>
+        <profile>
+            <id>database.active</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.liquibase</groupId>
+                        <artifactId>liquibase-maven-plugin</artifactId>
+                        <configuration>
+                            <promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
+                            <driver>org.postgresql.Driver</driver>
+                            <url>jdbc:postgresql://${testing.db.server}:${testing.db.port}/core</url>
+                            <username>${testing.db.login}</username>
+                            <password>${testing.db.password}</password>
+                            <changeLogFile>${main.sql}/com/hellblazer/CoRE/schema/ruleform/animations.xml</changeLogFile>
+                            <verbose>false</verbose>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <phase>process-resources</phase>
+                                <goals>
+                                    <goal>update</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>com.hellblazer</groupId>
+                        <artifactId>pljava-loader</artifactId>
+                        <configuration>
+                            <jdbcUrl>jdbc:postgresql://${testing.db.server}:${testing.db.port}/core</jdbcUrl>
+                            <username>${testing.db.login}</username>
+                            <password>${testing.db.password}</password>
+                            <excluded>
+                                <resource>
+                                    <groupId>org.apache.openjpa</groupId>
+                                    <artifactId>openjpa-all</artifactId>
+                                    <version>2.2.2</version>
+                                    <type>jar</type>
+                                </resource>
+                                <resource>
+                                    <groupId>com.hellblazer</groupId>
+                                    <artifactId>pljava-api</artifactId>
+                                    <version>0.0.1-SNAPSHOT</version>
+                                </resource>
+                            </excluded>
+                            <classpathProperty>pljavaClassPath</classpathProperty>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <phase>generate-test-sources</phase>
+                                <goals>
+                                    <goal>load</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>sql-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>set-classpath</id>
+                                <phase>generate-test-sources</phase>
+                                <goals>
+                                    <goal>execute</goal>
+                                </goals>
+                                <configuration>
+                                    <driver>org.postgresql.Driver</driver>
+                                    <url>jdbc:postgresql://${testing.db.server}:${testing.db.port}/core</url>
+                                    <username>${testing.db.login}</username>
+                                    <password>${testing.db.password}</password>
+                                    <autocommit>true</autocommit>
+                                    <sqlCommand>SELECT sqlj.set_classpath('ruleform',
+                                        '${pljavaClassPath}');</sqlCommand>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
