--- a/mixin-generator/pom.xml
+++ b/mixin-generator/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.hellblazer.CoRE</groupId>
+		<groupId>com.chiralbehaviors.CoRE</groupId>
 		<artifactId>CoRE.app</artifactId>
 		<version>0.0.2-SNAPSHOT</version>
 	</parent>
@@ -18,7 +18,7 @@
 			<version>3.0.4</version>
 		</dependency>
 		<dependency>
-			<groupId>com.hellblazer.CoRE</groupId>
+			<groupId>com.chiralbehaviors.CoRE</groupId>
 			<artifactId>model</artifactId>
 			<version>0.0.2-SNAPSHOT</version>
 		</dependency>
