--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 >
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.hellblazer.CoRE</groupId>
+    <groupId>com.chiralbehaviors.CoRE</groupId>
     <artifactId>CoRE.app</artifactId>
     <version>0.0.2-SNAPSHOT</version>
     <packaging>pom</packaging>
@@ -81,7 +81,7 @@
                 <version>2.2.3</version>
             </dependency>
             <dependency>
-                <groupId>com.hellblazer.CoRE</groupId>
+                <groupId>com.chiralbehaviors.CoRE</groupId>
                 <artifactId>test-framework</artifactId>
                 <version>0.0.2-SNAPSHOT</version>
                 <scope>test</scope>
@@ -203,7 +203,7 @@
         </repository>
         <repository>
             <id>hellblazer-snapshots</id>
-            <url>https://repository-hal900000.forge.cloudbees.com/snapshot/</url>
+            <url>https://repository-hellblazer.forge.cloudbees.com/snapshot/</url>
         </repository>
     </repositories>
 
@@ -213,7 +213,7 @@
             <url>http://repo1.maven.org/maven2/</url>
         </pluginRepository>
         <pluginRepository>
-            <id>hellblazer-snapshots</id>
+            <id>chiralbehaviors-snapshots</id>
             <url>https://repository-hal900000.forge.cloudbees.com/snapshot/</url>
         </pluginRepository>
         <pluginRepository>
