--- a/service/pom.xml
+++ b/service/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<artifactId>CoRE.app</artifactId>
-		<groupId>com.hellblazer.CoRE</groupId>
+		<groupId>com.chiralbehaviors.CoRE</groupId>
 		<version>0.0.2-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
@@ -28,7 +28,7 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>com.hellblazer.CoRE</groupId>
+			<groupId>com.chiralbehaviors.CoRE</groupId>
 			<artifactId>animations</artifactId>
 			<version>${project.version}</version>
 			<exclusions>
@@ -47,7 +47,7 @@
 			<artifactId>reflections</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.hellblazer.CoRE</groupId>
+			<groupId>com.chiralbehaviors.CoRE</groupId>
 			<artifactId>data-access</artifactId>
 			<version>${project.version}</version>
 			<exclusions>
@@ -108,7 +108,7 @@
 									implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>com.hellblazer.CoRE.CoREService</mainClass>
+									<mainClass>com.chiralbehaviors.CoRE.CoREService</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
