--- a/model/src/test/resources/jpa.properties
+++ b/model/src/test/resources/jpa.properties
@@ -3,3 +3,4 @@ openjpa.ConnectionPassword=${testing.db.password}
 openjpa.ConnectionURL=jdbc:postgresql://${testing.db.server}:${testing.db.port}/${testing.db.database}
 openjpa.ConnectionDriverName=org.postgresql.Driver
 openjpa.ConnectionFactoryProperties=PrettyPrint=true, PrettyPrintLineLength=80, PrintParameters=true
+openjpa.jdbc.TransactionIsolation=repeatable-read
