--- a/network-inference-generator/pom.xml
+++ b/network-inference-generator/pom.xml
@@ -7,19 +7,13 @@
         <artifactId>CoRE.app</artifactId>
         <version>0.0.2-SNAPSHOT</version>
     </parent>
-    <artifactId>mixin-generator</artifactId>
-    <name>Polymorphic Mixin Generator</name>
-    <packaging>maven-plugin</packaging>
-    <description>Source generator for the PolymorphicMixin class</description>
-
+    <artifactId>network-inference-generator</artifactId>
+    <name>Network Inference Query Generator</name>
+    <description>A plugin to generate network inference native queries</description>
     <dependencies>
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.chiralbehaviors.CoRE</groupId>
-            <artifactId>model</artifactId>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
@@ -56,8 +50,7 @@
         </plugins>
         <pluginManagement>
             <plugins>
-                <!--This plugin's configuration is used to store Eclipse m2e settings
-                    only. It has no influence on the Maven build itself. -->
+                <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself. -->
                 <plugin>
                     <groupId>org.eclipse.m2e</groupId>
                     <artifactId>lifecycle-mapping</artifactId>
@@ -67,15 +60,9 @@
                             <pluginExecutions>
                                 <pluginExecution>
                                     <pluginExecutionFilter>
-                                        <groupId>
-                                            org.apache.maven.plugins
-                                        </groupId>
-                                        <artifactId>
-                                            maven-plugin-plugin
-                                        </artifactId>
-                                        <versionRange>
-                                            [2.5.1,)
-                                        </versionRange>
+                                        <groupId>org.apache.maven.plugins</groupId>
+                                        <artifactId>maven-plugin-plugin</artifactId>
+                                        <versionRange>[2.5.1,)</versionRange>
                                         <goals>
                                             <goal>helpmojo</goal>
                                         </goals>
