--- a/animations/pom.xml
+++ b/animations/pom.xml
@@ -74,8 +74,8 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
+            <groupId>com.hellblazer</groupId>
+            <artifactId>utils</artifactId>
         </dependency>
     </dependencies>
     <build>
